= 3.6.0.rc1
- Cleanup: deprecate ActiveScaffold.set_defaults for ActiveScaffold.defaults, rename some setters
- Fix adding new action links on request with threadsafety enabled
- Fix iterating in config.columns with threadsafety enabled
- Fix changing pagination enabled/disabled with threadsafety enabled
- Allow create action in has_many through singular association
- Display no options in radio form_ui when no option is available, so column can be refreshed with update_columns
- Add as_main_div_data to override data attributes on main div
- Add loading indicator to embedded scaffolds, display error if fails
- Fix race condition in threadsafe mode with delayed setup
- Add ActiveScaffold::Config::Core.after_config_callbacks, so custom methods or procs can be added to be called after active_scaffold config block (used by bitfields bridge)
- Display loading indicator at bottom on auto pagination
- List rendering speed up
- Remove font family from CSS, it was preventing from changing it easily in body
- Fix search for mongoid models in with threadsafety enabled
- Keep nested params after calling render_field for column in subform
- Fix nested for controllers without list action (for example, for nested create on singular assocations)
- Fix delayed setup issues with threads
- Fix render_field under nested list for polymorphic association
- Add foreign_type column to constrained columns in nested list for polymorphic association
- Add return_to to action links on nested list for singular associations, so forms would return to list
- Case insensitive search with PostGIS adapter
- Use clear_storage with around_action and ensure, so empty hash is removed from session storage when exception is raised too
- Delete search from session when search is reset
- Add cache_column_counts method to get counts with one query for associations which are not preloaded, query per column is overridable with count_query_for_column
- ActiveStorage support with bridge